--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -15,15 +15,21 @@
 .icon-search:before {
   @extend .custom-button-icons;
   background: url(/assets/img/icons/search.svg) no-repeat;
-  width: 32px;
-  height: 32px;
+  width: 1.5rem;
+  height: 1.5rem;
   filter: invert(35%) sepia(93%) saturate(355%) hue-rotate(124deg) brightness(93%) contrast(88%);
 }
 .icon-remove:before {
   @extend .custom-button-icons;
   background: url(/assets/img/icons/remove.svg) no-repeat;
-  width: 32px;
-  height: 32px;
+  width: 1.5rem;
+  height: 1.5rem;
   filter: invert(35%) sepia(93%) saturate(355%) hue-rotate(124deg) brightness(93%) contrast(88%);
+}
+.icon-font-size:before {
+  @extend .custom-button-icons;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: url(/assets/img/icons/font-size.svg) no-repeat;
 }
 
