fix landing page

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -17,7 +17,8 @@
                         <div class="slider-content column is-half">
                             <div class="media">
                               <div class="media-content">
-                                <h2>{{story.title}}</h2>
+                                <div class="date">{{story.date | date: "%d.%m.%Y"}}</div>
+                                <h4>{{story.title}}</h4>
                               </div>
                             </div>
                 
