--- a/_includes/stories.html
+++ b/_includes/stories.html
@@ -13,8 +13,8 @@
             <div class="news-content column is-half">
                 <div class="media">
                   <div class="media-content">
-                    <h4>{{story.date | date: "%d.%m.%Y"}}</h4>
-                    <h2>{{story.title}}</h2>
+                    <div class="date">{{story.date | date: "%d.%m.%Y"}}</div>
+                    <h4>{{story.title}}</h4>
                   </div>
                 </div>                
                 <div class="content">
